--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -381,6 +381,9 @@ ul#nav li{
 	color: #f95555;
 	font-size: 16px;
 	margin-top: 10px;
+	border: 1px solid #f95555;
+	padding: 5px;
+	width: 100%;
 }
 
 .success-bar
@@ -389,6 +392,10 @@ ul#nav li{
 	text-align: center;
 	color: #2995bf;
 	font-size: 16px;
+	margin-bottom: 10px;
+	border: 1px solid #2995bf;
+	padding: 5px;
+	width: 100%;
 }
 
 
