--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -402,6 +402,7 @@ ul#nav li{
 	text-align: center;
 	color: #2995bf;
 	font-size: 16px;
+	margin-top: 10px;
 	margin-bottom: 10px;
 	border: 1px solid #2995bf;
 	padding: 5px;
