--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -387,6 +387,7 @@ ul#nav li{
 	color: #f95555;
 	font-size: 16px;
 	margin-top: 10px;
+	margin-bottom: 10px;
 	border: 1px solid #f95555;
 	padding: 5px;
 }
